--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "架构,框架,生活"
+description: "life, thoughts, stories and ideas."
 ---
 
 {% for post in paginator.posts %}
