--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "life, thoughts, stories and ideas."
+description: "Life, thoughts, stories and ideas."
 ---
 
 {% for post in paginator.posts %}
